file hierarchy edited

--- a/src/admin.html
+++ b/src/admin.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>EDBS | Main Page</title>
-<link rel="stylesheet" href="style/admin.css">
+<link rel="stylesheet" href="css/admin.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 </head>
@@ -15,7 +15,7 @@
     <!-- Fetch these values from the database -->
 
     <div class="circle-frame">
-        <img src="images/pfp.png" alt="Your Image">
+        <img src="img/pfp.png" alt="Your Image">
     </div>
 
     <h3 class="username">Erdem Sezen</h3>
@@ -196,7 +196,7 @@
 
 </div>
 
-<script src="script/admin.js"></script>
+<script src="js/admin.js"></script>
 
 </body>
 </html>
