--- a/src/login.html
+++ b/src/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-DBS</title>
-    <link rel="stylesheet" href="style/login.css"/>
+    <link rel="stylesheet" href="css/login.css"/>
 </head>
 
 <body>
@@ -31,6 +31,6 @@
     </section>
 
 </body>
-<script src="script/login.js"></script>
+<script src="js/login.js"></script>
 
 </html>
