--- a/src/admin.html
+++ b/src/admin.html
@@ -167,7 +167,7 @@
     </div>
 
     <div class="dashboard" id="takebackup" style="display: none;">
-        <p>This is Take Backup</p>
+        <button onclick="takeBackup(this)">Click this button to take backup.</button>
     </div>
 
 </div>
