connected DB for requests

--- a/src/admin.html
+++ b/src/admin.html
@@ -50,25 +50,9 @@
                         <th data-sort-by="location">Location</th>
                         <th data-sort-by="status">Status</th>
                         <th></th>
-                      </tr>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr>
-                        <td>Backup 1</td>
-                        <td>2023-01-01</td>
-                        <td>Server A</td>
-                        <td>Completed</td>
-                        <td><button onclick="deleteRow(this)">DELETE</button></td>
-                    </tr>
-                    <tr>
-                        <td>Backup 2</td>
-                        <td>2023-01-02</td>
-                        <td>Server B</td>
-                        <td>Error</td>
-                        <td><button onclick="deleteRow(this)">DELETE</button></td>
-                    </tr>
-                </tbody>
+                <tbody></tbody>
             </table>
         </div>
     </div>
