--- a/src/admin.html
+++ b/src/admin.html
@@ -122,7 +122,8 @@
                         <th data-sort-by="location">Location</th>
                         <th data-sort-by="Taken by">Taken by</th>
                         <th data-sort-by="date">Date</th>
-                        <th data-sort-by="viewlogs">View Logs</th>
+                        <th data-sort-by="time">Time</th>
+                        <th>View Logs</th>
                       </tr>
                     </tr>
                 </thead>
@@ -130,6 +131,7 @@
                     <tr>
                         <td>Moscow</td>
                         <td>erdem.sezen</td>
+                        <td>2024-07-16</td>
                         <td>2024-07-16</td>
                         <td><button onclick="viewLog(this)">VIEW</button></td>
                     </tr>
