Take backup button implemented

--- a/src/admin.html
+++ b/src/admin.html
@@ -143,6 +143,7 @@
 
     <div class="dashboard" id="takebackup" style="display: none;">
         <button onclick="takeBackup(this)">Click this button to take backup.</button>
+        <p id="statusMessage"></p>
     </div>
 
 </div>
