pats of home page implemented

--- a/src/admin.html
+++ b/src/admin.html
@@ -18,10 +18,10 @@
         <img src="" alt="Your Image" id="profilepic">
     </div>
 
-    <h3 class="username" id="username"></h3>
-    <h4 class="rank" id="position"></h4>
+    <h3 class="username" id="username">Name Surname</h3>
+    <h4 class="rank" id="position">-Position-</h4>
 
-    <h2 id="userLocation"></h2>   
+    <h2 id="userLocation">E-DBS<br>Location</h2>   
 
     <ul>
         <li><a href="#" onclick="showDashboard('Backup Requests')">Backup Requests</a></li>
