--- a/src/login.html
+++ b/src/login.html
@@ -24,7 +24,8 @@
         </form>
 
         <p class="newUser">
-            <span>Request help</span>
+            <p>Could not login?<br></p>
+            <center><span><a href=mailto:"erdem.sezen@enka.com">Click Here to Contact IT</a></span></center>
         </p> 
 
         <center><strong><p class="alert" id="alert"> Invalid username or password. Please try again.</p></strong></center>
