--- a/src/home.html
+++ b/src/home.html
@@ -26,7 +26,7 @@
     <ul>
         <li><a href="#" onclick="showDashboard('Backup Requests')">Backup Requests</a></li>
         <li><a href="#" onclick="showDashboard('Backup Files')">Backup Files</a></li>
-        <li><a href="#" onclick="showDashboard('Take Backup')">Take Backup</a></li>
+        <li><a href="#" onclick="showDashboard('Upload Backup')">Upload Backup</a></li>
         <li><a href="#" onclick="logout()">Log out</a></li>
 
     </ul>
@@ -46,6 +46,7 @@
                     <tr>
                         <th data-sort-by="r.message">Message</th>
                         <th data-sort-by="r.requestDate">Date</th>
+                        <th data-sort-by="r.username">Sender</th>
                         <th data-sort-by="r.status">Status</th>
                         <th></th>
                     </tr>
@@ -61,13 +62,14 @@
                     <p>Drag and drop files here</p>
                 </div> -->
                 <h2>File Upload</h2>
-                <form action="/upload" method="POST" enctype="multipart/form-data">
+                <form action="/upload" method="POST" enctype="multipart/form-data" id="uploadForm">
                     <input type="file" name="file" required>
+                    <input type="hidden" name="requestID" id="requestID" value="null">
                     <button type="submit">Upload File</button>
                 </form>
-                <p id="backupStatusMessage"></p>
             </div>
         </div>
+        <div id="overlay1" class="overlay"></div>
 
     </div>
 
@@ -89,9 +91,24 @@
 
     </div>
 
-    <div class="dashboard" id="takebackup" style="display: none;">
-        <button onclick="takeBackup(this)">Click this button to take backup.</button>
+    <div class="dashboard" id="uploadbackup" style="display: none;">
+        <button onclick="uploadBackup(this)">Click this button to upload backup.</button>
         <p id="statusMessage"></p>
+
+        <div id="uploadPopup" class="popup">
+            <span class="close" id="closeUploadPopup">&times;</span>
+            <div class="popup-content">
+                <!-- <div id="dropzone">
+                    <p>Drag and drop files here</p>
+                </div> -->
+                <h2>File Upload</h2>
+                <form action="/upload" method="POST" enctype="multipart/form-data">
+                    <input type="file" name="file" required>
+                    <button type="submit">Upload File</button>
+                </form>
+            </div>
+        </div>
+        <div id="overlay2" class="overlay"></div>
     </div>
 
 </div>
